change bg color

--- a/themes/evie-hugo/assets/sass/base/_variables.scss
+++ b/themes/evie-hugo/assets/sass/base/_variables.scss
@@ -1,6 +1,6 @@
 // Colors
-$primary: #6c63ff;
-$secondary: #4641ff;
+$primary: #63aeff;
+$secondary: #41c6ff;
 $accent: #06d19c;
 $primary-dark: darken($primary, 8%);
 $text: #666;
