add external links, make text more visible

--- a/themes/evie-hugo/layouts/partials/footer.html
+++ b/themes/evie-hugo/layouts/partials/footer.html
@@ -21,5 +21,28 @@
 				</div>
 			</div>
 		</div>
+
+		<div class="footer__inner">
+			<a href="https://www.iplaysoft.com/lomorage.html">
+				<img src="/img/links/iplaysoft.png"/ height="80">
+			</a>
+
+			<a href="https://www.canalapps.com/apps/alternativas-google-fotos-almacenamiento-gratuito-3983/">
+				<img src="/img/links/canalapps.png"/ height="80">
+			</a>
+			
+			<a href="https://futurezone.at/produkte/google-fotos-wird-kostenpflichtig-die-besten-alternativen/401099544">
+				<img src="/img/links/futurezone.png"/ height="80">
+			</a>
+			
+			<a href="https://nxtrung87.medium.com/use-raspberry-to-back-up-photos-instead-of-google-photo-5101165d3b83">
+				<img src="/img/links/medium.png"/ height="80">
+			</a>
+			
+			<a href="https://www.appinn.com/lomorage-backup-photos/">
+				<img src="/img/links/appinn.png"/ height="80">
+			</a>
+		</div>
+		
 	</div>
 </div>
