remove footer banners

--- a/themes/evie-hugo/layouts/partials/footer.html
+++ b/themes/evie-hugo/layouts/partials/footer.html
@@ -23,7 +23,7 @@
 		</div>
 
 		<div class="footer__inner">
-			<a href="https://www.iplaysoft.com/lomorage.html">
+			<!-- <a href="https://www.iplaysoft.com/lomorage.html">
 				<img src="/img/links/iplaysoft.png"/ height="80">
 			</a>
 
@@ -41,7 +41,7 @@
 			
 			<a href="https://www.appinn.com/lomorage-backup-photos/">
 				<img src="/img/links/appinn.png"/ height="80">
-			</a>
+			</a> -->
 		</div>
 		
 	</div>
